script and css and html changes, for jump to section feature, and fixes

--- a/homepage.css
+++ b/homepage.css
@@ -85,7 +85,7 @@ a{text-decoration: none;color: #000;}
 .filter-toggle-btn img{width: 15px;height: auto;position: relative;top: 2px;}
 .filter-category{border-bottom: 1px solid #E3E3E3;padding: 10px;}
 .filter-category:last-child{border-bottom: none;}
-.category-header{font-weight: 400;font-size: 20px;margin-bottom: 15px;line-height: 22.8px;display: flex;align-items: center;justify-content: space-between;}
+.category-header{font-weight: 400;font-size: 20px;margin-bottom: 15px;line-height: 22.8px;display: flex;align-items: center;justify-content: space-between;cursor: pointer;}
 .category-header i{cursor: pointer;}
 .filter-name{display: flex;}
 .filter-options{display: none;margin-top: 10px;padding-left: 10px;}
@@ -96,13 +96,14 @@ a{text-decoration: none;color: #000;}
 
 .toggle-more { color: rgba(0,0,0,0.7); cursor: pointer; margin-top: 5px; font-size: 15px;line-height: 24.31px;font-weight: 300; }
 .tags-container{display: flex;flex-wrap: wrap;justify-content: flex-start;gap: 8px;margin-bottom: 15px;}
-.tags{padding: 0 15px;border-radius: 10px;background:#FFF2E2;border: 1px solid #F39314;}
+.tags{padding: 0 15px;border-radius: 10px;background:#FFF;border: 1px solid #DDD2D2;transition: 0.3s ease-in-out;}
+.tags:hover{background: #F3931430;border: 1px solid #F39314;}
 .tags a{color: #464444;font-weight: 400;font-size: 16px;line-height: 35px;}
 .search-tags{padding-left: 0;}
 /****LEFT SIDE FILTERS END****/
 
 /***********MIDDLE CONTENT BLOCK CSS************/
-.middle{position: relative;width: 65%;transition: width 0.3s ease-in-out;margin-bottom: 5rem;}
+.middle{position: relative;width: 63%;transition: width 0.3s ease-in-out;margin-bottom: 5rem;}
 
 /****Inscription Search Bar****/
 
@@ -175,7 +176,7 @@ a{text-decoration: none;color: #000;}
 
 .full-view-btn span.icon i {
   position: relative;
-  top: -1px;
+  top: 0.5px;
 }
 
 .full-view-btn:hover .text {
@@ -190,6 +191,7 @@ a{text-decoration: none;color: #000;}
 
 .lifted-sub{position: relative; top: -22px; background: #FFF2E2; padding: 7px; border-radius: 5px; width: fit-content; line-height: 25px;}
 .script-lines{line-height: 36px;list-style: none;height: 385px;overflow-y: scroll;/*scrollbar-color: #F39314 #c2c9d2;  scrollbar-width: thin;*/}
+.script-lines li{padding-right:5px;}
 .editor-comment{display: flex;justify-content: space-between;gap: 15px;align-items: center;background: #FFF9F0;padding: 12px 25px;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;}
 .edit-icn{position: relative;top: 8px;padding-right: 5px;}
 .e-heading{font-weight: 400;font-size: 18px;line-height: 20.4px;white-space: nowrap;}
@@ -197,8 +199,13 @@ a{text-decoration: none;color: #000;}
 
 .article-2 .translation-box{margin-top: 45px;}
 /* .article-2 .more-content { height: 725px; overflow: hidden; } */
-.translation-box-original{height: 0;transition: height 0.5s ease-in-out;visibility: hidden;}
-.translation-box-original.show-box{height: 680px;visibility: visible;}
+
+/* .translation-box-original{height: 0;transition: height 0.5s ease-in-out;visibility: hidden;}
+.translation-box-original.show-box{height: 680px;visibility: visible;} */
+
+.translation-box-original{transition: all 0.5s ease-in-out;display: none;}
+.translation-box-original.show-box{display: block;}
+
 .original-script-box{padding: 35px;}
 .see-original-btn{margin-left: auto;margin-right: 0;display: block;border: none;border:none;outline: none;cursor: pointer;
   font-size: 18px;font-weight: 600;line-height: 45px;color: #F39314;background: #fff;text-decoration: underline;text-decoration-thickness: 2px;text-underline-offset: 12px;margin-bottom: 35px;}
@@ -219,13 +226,16 @@ a{text-decoration: none;color: #000;}
 
 /********************RIGHT RELATED LINKS CSS*************/
 .right{visibility: hidden;width: 0;overflow: hidden;transition: width 0.5s ease-in-out;box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  border-radius: 10px;border: 1px solid rgba(243, 147, 20, 0.2);background: #fff1df;padding: 0px;height: fit-content;margin-top: 5.5rem;position: sticky;top: 10px; }
+  border-radius: 10px;border: 1px solid rgba(243, 147, 20, 0.2);background: #FFFAF3;padding: 0px;margin-top: 5.5rem;position: sticky;top: 10px;height: fit-content; }
   .index-header{display: flex;justify-content: space-between;align-items: baseline;}
 .index-btn{background: #FFF3E3;border: 1px solid #F3931469;border-radius: 7px;padding: 8px 10px;display: none;right: 4.5rem;width: 80px;}
 .index-btn.show{display: block;height: fit-content;position: absolute;top: 28.5rem;right: 1rem;}
-.right.visible{width: 18%;visibility: visible;padding: 15px;}
+.right.visible{width: 20%;visibility: visible;padding: 25px 15px;}
 .right-heading{font-size: 22.42px;font-weight: 400;line-height: 40.35px;}
-.related-links{display: flex;justify-content: flex-start;gap: 5px;border-bottom: 1px solid #F0E6D8;padding: 15px 0;}
+.related-links-container{height: 255px;overflow-y: scroll;}
+.related-links-container::-webkit-scrollbar { width: 3px; }
+.related-links{display: flex;justify-content: flex-start;gap: 5px;border-bottom: 1px solid #F0E6D8;padding: 15px 5px;}
+.related-links:last-child{border-bottom: none;}
 .related-links img{width: 13px;height: auto;}
 .related-links a{font-size: 16px;font-weight: 400;line-height: 22px;color: #000;}
 .link-active{color: #F39314 !important;}
@@ -389,11 +399,20 @@ a{text-decoration: none;color: #000;}
   .text-container{padding: 1rem 8rem;}
 }
 
+@media (max-width:1526px){
+  .middle{width: 61%;}
+  .right.visible{width: 22%;}
+  .category-header{font-size: 17px;} 
+  .filter-options label{font-size: 15px;}
+  .toggle-more{font-size: 14px;}
+  .right-heading{font-size: 19.42px;}
+  .related-links a{font-size: 15px;}
+}
+
 @media (max-width: 1440px){
   .text-container{padding: 1rem 4rem;}
   /* .nav-link-cont{gap: 8rem;;} */
-  .nav-links{gap: 2rem;}
-  .category-header{font-size: 17px;}  
+  .nav-links{gap: 2rem;}   
 }
 
 @media (max-width: 1250px){
@@ -413,7 +432,7 @@ a{text-decoration: none;color: #000;}
   .tag-list ul li{font-size: 12px;line-height: 17.5px;padding: 0 5px 0 0;}
   .filter-options label{font-size: 14px;}
   .related-links a{font-size: 14px;}
-  .editor-comment{padding: 10px;}
+  .editor-comment{padding: 15px;}
   .e-heading{font-size: 16px;}
   .e-comment{font-size: 13px;}
   .full-view-btn, .original-txt-btn{width: 150px;}
@@ -473,6 +492,9 @@ a{text-decoration: none;color: #000;}
 }
 
 @media (max-width: 600px){
+  .text-container { padding: 10px; }
+  .content-cont { padding: 0 20px; }
+  .translation-box { padding: 0px 10px;}
   .home-bnr { margin-bottom: -180px; }
   .home-bnr-con { top: -180px; }
   .top-heading{font-size: 33px;margin: 30px 0 10px;}
@@ -489,6 +511,9 @@ a{text-decoration: none;color: #000;}
   .load-more{left: 44%;}
   .left{width: 60%;}
   .right.visible{width: 60%;}
+  .editor-comment{flex-direction: column;text-align: center;gap: 5px;}
+  .edit-icn{top: 6px;height: 20px;}
+  .e-comment {line-height: 17px;}
 }
 
 @media (max-width: 578px){
@@ -511,13 +536,9 @@ a{text-decoration: none;color: #000;}
   .article{padding-top: 15px;}
   .article-head { font-size: 20px; line-height: 24px;}
   .minitags{font-size: 13px;}
-  .translation-box{padding: 0 15px;}
   .script-lines{height: 280px;}
   .script-lines li{font-size: 14px;line-height: 26px;}
   .text-head{font-size: 14px; line-height: 20px;}
-  .editor-comment{flex-direction: column;text-align: center;gap: 5px;}
-  .edit-icn{top: 6px;height: 20px;}
-  .e-comment {line-height: 17px;}
   /* .article-2 .more-content{height: 635px;} */
   .lang-btn-container{margin-top: 15px;}
   .full-view-btn, .original-txt-btn{width: 120px;font-size: 15px;padding: 10px;}
